Made DashboardPage the default page for Dashboard tool. Fixed code to save CalendarLinks.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312834 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -40,18 +40,16 @@
 		                    </thead>
 		                    <tr class="alt schedItem" id="item1" wicket:id="calendarItems">
 		                        <td>
-		                            <span wicket:id="calendarTime">[Date]</span>
-		                            
+		                            <span wicket:id="calendarDate">[Date]</span>
 		                        </td>
 		                        <td>
-		                        	
 		                            <span wicket:id="calendarTime">[Time]</span>
 		                        </td>
 		                        <td>
-		                            <span wicket:id="title">[Event Title]</span>
+		                            <a href="#" wicket:id="itemLink">[Item Title]</a>
 		                        </td>
 		                        <td>
-		                            <span wicket:id="context.title">[Site Title]</span>
+		                            <a href="#" wicket:id="siteLink">[Site Title]</a>
 		                        </td>
 		                        <td class="action">
 		                            <div class="actionPanelTrig" style="display:none">
@@ -92,11 +90,11 @@
 		                        </tr>
 		                    </thead>
 		                    <tr class="alt newsItem" id="item11" wicket:id="newsItems">
-		                        <td class="newsTitle">
-		                        	<span  wicket:id="title">[item title]</span>
+		                        <td class="title">
+		                        	<a href="#" wicket:id="itemLink">[item title]</a>
 		                        </td>
 		                        <td>
-		                        	<span wicket:id="context.title">[site title]</span>
+		                        	<a href="#" wicket:id="siteLink">[site title]</a>
 		                            SI502
 		                        </td>
 		                        <td>
