add event sourcetype and change the target of site link
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312851 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -54,7 +54,7 @@
 		                            <a href="#" wicket:id="itemLink">[Item Title]</a>
 		                        </td>
 		                        <td>
-		                            <a href="#" wicket:id="siteLink">[Site Title]</a>
+		                            <a href="#" wicket:id="siteLink" target="_top">[Site Title]</a>
 		                        </td>
 		                        <td class="action">
 		                            <div class="actionPanelTrig" style="display:none">
@@ -95,11 +95,14 @@
 		                        </tr>
 		                    </thead>
 		                    <tr class="alt newsItem" id="item11" wicket:id="newsItems">
+		                    	<td>
+		                            <span wicket:id="itemType">[item type]</span>
+		                        </td>
 		                        <td class="title">
 		                        	<a href="#" wicket:id="itemLink">[item title]</a>
 		                        </td>
 		                        <td>
-		                        	<a href="#" wicket:id="siteLink">[site title]</a>
+		                        	<a href="#" wicket:id="siteLink" target="_top">[site title]</a>
 		                        </td>
 		                        <td>
 		                        	<span wicket:id="newsTime">[news time]</span>
