--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -52,7 +52,7 @@
 																<span wicket:id="calendarTime">[Time]</span>
 		                        </td>
 		                        <td>
-		                            <a href="#" wicket:id="itemLink">[Item Title]</a>
+		                            <a href="#" wicket:id="itemLink" target="_top">[Item Title]</a>
 		                        </td>
 		                        <td>
 		                            <a href="#" wicket:id="siteLink" target="_top">[Site Title]</a>
@@ -101,7 +101,7 @@
 		                            <span wicket:id="itemType">[item type]</span>
 		                        </td>
 		                        <td class="title">
-		                        	<a href="#" wicket:id="itemLink">[item title]</a>
+		                        	<a href="#" wicket:id="itemLink" target="_top">[item title]</a>
 		                        </td>
 		                        <td>
 		                        	<a href="#" wicket:id="siteLink" target="_top">[site title]</a>
