cleanup the page navigation
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312854 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/BasePage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/BasePage.html
@@ -9,22 +9,15 @@
 			<ul class="navIntraTool actionToolbar" role="menu">
 				<li class="firstToolBarItem" role="menuitem">
 					<span>
-						<a wicket:id="firstLink">
-							<span wicket:id="firstLinkLabel">[firstLinkLabel]</span>
+						<a wicket:id="dashboardLink">
+							<span wicket:id="dashboardLinkLabel">[dashboardLinkLabel]</span>
 						</a>
 					</span>
 				</li>
 				<li role="menuitem">
 					<span>
-						<a wicket:id="secondLink">
-							<span wicket:id="secondLinkLabel">[secondLinkLabel]</span>
-						</a>
-					</span>
-				</li>
-				<li role="menuitem">
-					<span>
-						<a wicket:id="thirdLink">
-							<span wicket:id="thirdLinkLabel">[thirdLinkLabel]</span>
+						<a wicket:id="optionsLink">
+							<span wicket:id="optionsLinkLabel">[optionsLinkLabel]</span>
 						</a>
 					</span>
 				</li>
