--- a/tool/src/java/org/sakaiproject/dash/tool/pages/OptionsPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/OptionsPage.html
@@ -4,10 +4,7 @@
 <body>
 <wicket:extend>
 	
-	<p>Hello, <span wicket:id="userDisplayName" /></p>
-	
-	<p wicket:id="time" />
-	
+	<p>place holder for the option page</p>
 	
 	
 </wicket:extend>
