DASH-20 need to remove the ProjectLogic bean definition inside components.xml
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312857 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -66,10 +66,10 @@
 	                                    <a href="#">Remove item</a>
 	                                </li>
 	                                <li class="actionHideType">
-	                                    <a href="#">Block [event type]s</a>
+	                                    <a href="#">Block <span wicket:id="itemTypeCalendarBlock">[item type]</span> items</a>
 	                                </li>
 	                                <li class="actionHideContext">
-	                                    <a href="#">Block items from [site title]</a>
+	                                    <a href="#">Block items from <span wicket:id="siteTitleCalenderBlock">[site title]</span></a>
 	                                </li>
 		                            </ul>
 		                        </td>
@@ -118,10 +118,10 @@
 	                                    <a href="#">Remove item</a>
 	                                </li>
 	                                <li class="actionHideType">
-	                                    <a href="#">Block [event type]s</a>
+	                                    <a href="#">Block <span wicket:id="itemTypeNewsBlock">[item type]</span> items</a>
 	                                </li>
 	                                <li class="actionHideContext">
-	                                    <a href="#">Block items from [site title]</a>
+	                                    <a href="#">Block items from <span wicket:id="siteTitleNewsBlock">[site title]</span></a>
 	                                </li>
 		                            </ul>
 		                        </td>
