fix the wicket id problem in the frontpage
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312861 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -69,7 +69,7 @@
 	                                    <a href="#">Block <span wicket:id="itemTypeCalendarBlock">[item type]</span> items</a>
 	                                </li>
 	                                <li class="actionHideContext">
-	                                    <a href="#">Block items from <span wicket:id="siteTitleCalenderBlock">[site title]</span></a>
+	                                    <a href="#">Block items from <span wicket:id="siteTitleCalendarBlock">[site title]</span></a>
 	                                </li>
 		                            </ul>
 		                        </td>
