--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -137,6 +137,7 @@
           
       </div>
        <div id="results" style="display:none"></div> 
+       <div id="instructionHolder"></div>
       <script type="text/javascript">
           $(document).ready(function(){
               setupTableStriping()
