DASH-35 - display detail of items inline, not in modal dialog
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312876 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -133,11 +133,11 @@
       <div id="dialog"  style="display:none">
           
       </div>
-      <div id="dialogDum">
+      <div id="dialogDum" >
           
       </div>
        <div id="results" style="display:none"></div> 
-       <div id="instructionHolder"></div>
+       <div id="instructionHolder"  style="display:none"></div>
       <script type="text/javascript">
           $(document).ready(function(){
               setupTableStriping()
