DASH-42 Provided ResourceEntityType.java to handle disclosures for content-resource entities. Added support in tool code for getting json to describe entities.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312883 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -51,7 +51,7 @@
 		                    <tr class="" id="item1" wicket:id="calendarItems">
 		                        <td>
 		                            <span wicket:id="calendarDate">[Date]</span>
-																<span wicket:id="calendarTime">[Time]</span>
+									<span wicket:id="calendarTime">[Time]</span>
 		                        </td>
 		                        <td class="tab">
 		                            <a href="#" wicket:id="itemLink" class="itemLink" target="_top">[Item Title]</a>
@@ -101,6 +101,7 @@
 		                    <tr class="alt newsItem" id="item11" wicket:id="newsItems">
 		                    	<td>
 		                            <span wicket:id="itemType" class="itemType">[item type]</span>
+		                            <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
 		                        </td>
 		                        <td class="tab">
 		                        	<a href="#" wicket:id="itemLink" class="itemLink" target="_top">[item title]</a>
@@ -169,7 +170,8 @@
           "seemore" : "See more",
           "noinstructions" :"No text instructions. Maybe instructions are in an attachment - see more to confirm."
           }
-      </textarea>      
+      </textarea> 
+      <div wicket:id="callbackUrl" class="callBackUrl">[callback url]</div>     
 		</wicket:extend>
 	</body>
 </html>
