DASH-42 Added info to calendar list to support retrieving JSON about entities referenced in the calendar.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312886 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -52,6 +52,8 @@
 		                        <td>
 		                            <span wicket:id="calendarDate">[Date]</span>
 									<span wicket:id="calendarTime">[Time]</span>
+									<span wicket:id="itemType" class="itemType" style="display:none;">[item type]</span>
+		                            <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
 		                        </td>
 		                        <td class="tab">
 		                            <a href="#" wicket:id="itemLink" class="itemLink" target="_top">[Item Title]</a>
