DASH-42 Added {0} to some strings to signal a replacement. Added menu items for for keeping items in the dashboard and blocking specific kinds of items from a context. Fixed possible null-pointer.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312890 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -66,14 +66,20 @@
 		                                <a href="#"></a>
 		                            </div>
 		                            <ul class="actionPanel" style="display:none">
+	                                <li class="actionKeepThis">
+	                                    <a href="#">Keep this item in my dashboard</a>
+	                                </li>
 	                                <li class="actionHideThis">
-	                                    <a href="#">Remove item</a>
+	                                    <a href="#">Remove this item</a>
 	                                </li>
 	                                <li class="actionHideType">
-	                                    <a href="#">Block <span wicket:id="itemTypeCalendarBlock">[item type]</span> items</a>
+	                                    <a href="#">Block <span wicket:id="itemTypeCalendarBlock1">[item type]</span> items</a>
 	                                </li>
 	                                <li class="actionHideContext">
-	                                    <a href="#">Block items from <span wicket:id="siteTitleCalendarBlock">[site title]</span></a>
+	                                    <a href="#">Block items from <span wicket:id="siteTitleCalendarBlock1">[site title]</span></a>
+	                                </li>
+	                                <li class="actionHideTypeInContext">
+	                                    <a href="#">Block <span wicket:id="itemTypeCalendarBlock2">[item type]</span> items from <span wicket:id="siteTitleCalendarBlock2">[site title]</span></a>
 	                                </li>
 		                            </ul>
 		                        </td>
@@ -119,14 +125,20 @@
 		                                <a href="#"></a>
 		                            </div>
 		                            <ul class="actionPanel" style="display:none">
+	                                <li class="actionKeepThis">
+	                                    <a href="#">Keep this item in my dashboard</a>
+	                                </li>
 	                                <li class="actionHideThis">
-	                                    <a href="#">Remove item</a>
+	                                    <a href="#">Remove this item</a>
 	                                </li>
 	                                <li class="actionHideType">
-	                                    <a href="#">Block <span wicket:id="itemTypeNewsBlock">[item type]</span> items</a>
+	                                    <a href="#">Block <span wicket:id="itemTypeNewsBlock1">[item type]</span> items</a>
 	                                </li>
 	                                <li class="actionHideContext">
-	                                    <a href="#">Block items from <span wicket:id="siteTitleNewsBlock">[site title]</span></a>
+	                                    <a href="#">Block items from <span wicket:id="siteTitleNewsBlock1">[site title]</span></a>
+	                                </li>
+	                                <li class="actionHideTypeInContext">
+	                                    <a href="#">Block <span wicket:id="itemTypeNewsBlock2">[item type]</span> items from <span wicket:id="siteTitleNewsBlock2">[site title]</span></a>
 	                                </li>
 		                            </ul>
 		                        </td>
