DASH-55 Added support for custom labels in the list view for CalendarItems.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312926 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -50,6 +50,7 @@
 		                    </thead>
 		                    <tr class="" id="item1" wicket:id="calendarItems">
 		                        <td>
+		                        	<span wicket:id="calendarTimeLabel">[Time Label]</span>
 		                            <span wicket:id="calendarDate">[Date]</span>
 									<span wicket:id="calendarTime">[Time]</span>
 									<span wicket:id="itemType" class="itemType" style="display:none;">[item type]</span>
@@ -185,7 +186,7 @@
           "noinstructions" :"No text instructions. Maybe instructions are in an attachment - see more to confirm."
           }
       </textarea> 
-      <div wicket:id="callbackUrl" class="callBackUrl">[callback url]</div>     
+      <div wicket:id="callbackUrl" class="callBackUrl" style="display:none;">[callback url]</div>     
 		</wicket:extend>
 	</body>
 </html>
