DASH-55 Reverting change made in callBackUrl.  It breaks when hidden.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312929 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -186,7 +186,7 @@
           "noinstructions" :"No text instructions. Maybe instructions are in an attachment - see more to confirm."
           }
       </textarea> 
-      <div wicket:id="callbackUrl" class="callBackUrl" style="display:none;">[callback url]</div>     
+      <div wicket:id="callbackUrl" class="callBackUrl" >[callback url]</div>   <!-- style="display:none;" -->  
 		</wicket:extend>
 	</body>
 </html>
