DASH-58 Hid the callback URL using "skip" class in the markup.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312934 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -186,7 +186,7 @@
           "noinstructions" :"No text instructions. Maybe instructions are in an attachment - see more to confirm."
           }
       </textarea> 
-      <div wicket:id="callbackUrl" class="callBackUrl" >[callback url]</div>   <!-- style="display:none;" -->  
+      <div wicket:id="callbackUrl" class="callBackUrl skip" >[callback url]</div>    
 		</wicket:extend>
 	</body>
 </html>
