--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -34,35 +34,35 @@
                 <table cellspacing="0" id="sched" summary="List of upcoming tasks. Column 1: date and time when task is due. Column 2: task title and link to get more details. Column 3: link to site where task originated. Column 4: list of options managing items of this type or origin." border="0">
 		                    <thead>
 		                        <tr class="header">
-		                            <th scope="col">
+		                            <th scope="col" class="one date">
 		                                Date and Time
 		                            </th>
-		                            <th scope="col">
+		                            <th scope="col"  class="two">
 		                                Title
 		                            </th>
-		                            <th scope="col">
+		                            <th scope="col"  class="three">
 		                                From site
 		                            </th>
-		                            <th>
+		                            <th  class="four">
 		                                Action
 		                            </th>
 		                        </tr>
 		                    </thead>
 		                    <tr class="" id="item1" wicket:id="calendarItems">
-		                        <td>
+		                        <td class="one date" >
 		                        	<span wicket:id="calendarTimeLabel">[Time Label]</span>
 		                            <span wicket:id="calendarDate">[Date]</span>
 									<span wicket:id="calendarTime">[Time]</span>
 									<span wicket:id="itemType" class="itemType" style="display:none;">[item type]</span>
 		                            <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
 		                        </td>
-		                        <td class="tab">
+		                        <td class="tab two">
 		                            <a href="#" wicket:id="itemLink" class="itemLink" target="_top">[Item Title]</a>
 		                        </td>
-		                        <td>
+		                        <td class="three">
 		                            <a href="#" wicket:id="siteLink"  class="siteLink" target="_top">[Site Title]</a>
 		                        </td>
-		                        <td class="action">
+		                        <td class="action four">
 		                            <div class="actionPanelTrig" style="display:none">
 		                                <a href="#"></a>
 		                            </div>
@@ -93,35 +93,36 @@
 		                <table cellspacing="0" id="news" summary="List of recent events. Column 1: link to details on item. Column 2: link to site where event took place. Column 3: date and time when event took place. Column 4: list of options managing items of this type or origin." border="0">
 		                    <thead>
 		                        <tr class="header">
-		                            <th scope="col">
+		                            <th scope="col"  class="one">
 		                                What
 		                            </th>
-		                            <th scope="col">
+		                            <th scope="col"  class="two">
 		                                From where
 		                            </th>
-		                            <th scope="col">
+		                            <th scope="col"  class="three">
 		                                When
 		                            </th>
-		                            <th>
+		                            <th class="four">
 		                                Action
 		                            </th>
 		                        </tr>
 		                    </thead>
 		                    <tr class="alt newsItem" id="item11" wicket:id="newsItems">
-		                    	<td>
+		                    	<td  class="one">
 		                            <span wicket:id="itemType" class="itemType">[item type]</span>
 		                            <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
 		                        </td>
-		                        <td class="tab">
-		                        	<a href="#" wicket:id="itemLink" class="itemLink" target="_top">[item title]</a>
-		                        </td>
-		                        <td>
-		                        	<a href="#" wicket:id="siteLink"  class="siteLink" target="_top">[site title]</a>
-		                        </td>
-		                        <td>
+		                        <td  class="two date">
 		                        	<span wicket:id="newsTime">[news time]</span>
 		                        </td>
-		                        <td class="action">
+
+		                        <td class="tab three">
+		                        	<a href="#" wicket:id="itemLink" class="itemLink" target="_top">[item title]</a>
+		                        </td>
+		                        <td  class="four">
+		                        	<a href="#" wicket:id="siteLink"  class="siteLink" target="_top">[site title]</a>
+		                        </td>
+		                        <td class="action five">
 		                            <div class="actionPanelTrig" style="display:none">
 		                                <a href="#"></a>
 		                            </div>
@@ -186,7 +187,7 @@
           "noinstructions" :"No text instructions. Maybe instructions are in an attachment - see more to confirm."
           }
       </textarea> 
-      <div wicket:id="callbackUrl" class="callBackUrl skip" >[callback url]</div>    
+      <div wicket:id="callbackUrl" class="callBackUrl" >[callback url]</div>   <!-- style="display:none;" -->  
 		</wicket:extend>
 	</body>
 </html>
